--- a/src/pages/SearchHeader/SearchHeader.scss
+++ b/src/pages/SearchHeader/SearchHeader.scss
@@ -1,7 +1,27 @@
-@import "~taro-ui/dist/style/components/search-bar.scss";
-@import "~taro-ui/dist/style/components/button.scss";
-@import "~taro-ui/dist/style/components/icon.scss";
 .SearchHeader {
+  color: white;
+
+  .search_wrap {
+    background-color: #212427;
+    background-image: linear-gradient(to bottom, #292c2f 0, #191c1f 100%);
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.75);
+    box-shadow:
+      inset 0 0 0 1px rgba(31, 31, 31, 0.66),
+      0 0 10px rgba(0, 0, 0, 0.75),
+      0 0 10px rgba(0, 0, 0, 0.75);
+  }
+
+  .senior_wrap {
+    background-color: rgba(39,42,44,.75);
+    background-image: linear-gradient(to bottom,#292c2f 0,rgba(34,34,34,.5) 100%);
+    box-shadow: 0 0 0 1px #222, 0 5px 5px rgba(0,0,0,.5);
+  }
+
+  .input-bg {
+    background-color: #1b1b1b;
+    background-image: linear-gradient(to bottom,#191919 0,#1c1c1c 100%);
+  }
+
   .search_bar_wrap {
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 
@@ -18,7 +38,8 @@
       content: "";
       position: absolute;
       bottom: 0;
-      left: 0;
+      left: 50%;
+      transform: translateX(0%);
       background-color: #38bdf8;
     }
   }
@@ -26,9 +47,27 @@
   .category_item_active {
     &::after {
       width: 100%;
-      transition: width 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      transform: translateX(-50%);
+      transition: all 0.8s linear;
     }
   }
 
+  .custom-color {
+    --dropdown-menu-title-active-color: #1989fa;
+    --dropdown-menu-option-active-color: #1989fa;
+  }
 
+  .taroify-dropdown-menu__bar {
+    height: 2.5rem;
+    background: transparent;
+  }
+
+  .taroify-dropdown-menu-title__content {
+    color: inherit;
+  }
+
+  .taroify-ellipsis,
+  .taroify-radio__label {
+    font-size: 0.7rem;
+  }
 }
