--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,21 +1,22 @@
-@import "~taro-ui/dist/style/components/icon.scss";
+
 .index {
   height: 100vh;
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  background-image: linear-gradient(to bottom,#3c3c3c 0,#222 100%);
 
   .scrollview {
     flex: 1;
     overflow-y: auto;
   }
 
-  .save-btm {
-    padding-bottom: constant(safe-area-inset-bottom);
-    /*兼容 IOS<11.2*/
-    padding-bottom: env(safe-area-inset-bottom);
-    /*兼容 IOS>11.2*/
-  }
+  // .save-btm {
+  //   padding-bottom: constant(safe-area-inset-bottom);
+  //   /*兼容 IOS<11.2*/
+  //   padding-bottom: env(safe-area-inset-bottom);
+  //   /*兼容 IOS>11.2*/
+  // }
 
   .tabBar {
     box-sizing: border-box;
@@ -23,7 +24,7 @@
   }
 
   .active-bar {
-    color: #056de8;
+    color: white;
     transition: all 0.5s;
   }
 }
